--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header">
             <h1>Yielda</h1>
             <div class="quote">
-                <p class="quote-text animate-init">Network, Automation & Space</p>
+                <p class="quote-text animate-init">Network, Automation, Space & Ai</p>
                 <p class="quote-author animate-init">——2019/11/16</p>
             </div>
         </div>
