--- a/fireworks/index.html
+++ b/fireworks/index.html
@@ -22,7 +22,8 @@ html,body{
 </head>
 <body>
 
-<canvas id="canvas"></canvas><script>
+<canvas id="canvas"></canvas>
+<script>
 function initVars(){
 
     pi=Math.PI;
