--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="location">
             <i class="location-icon"></i>
-            <span class="location-text animate-init">SuZhou - China</span>
+            <span class="location-text animate-init">Chengdu - China</span>
         </div>
         <div class="relocating">
             Navigating to: <span class="relocate-location"></span>...
