--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <title></title>
 </head>
 <script language="javascript">
-  var domain = "";
+  var domain = "2048ai.online";
   var src = window.location.href;
   var prtc = src.substring(0, src.indexOf(':'));
   var target = src.substring(src.indexOf('/', src.indexOf(':') + 3));
